# client-portfolio

./: package-lock.json  package.json
app/: layout.tsx  page.tsx
app/backend/: agent.py  ingest.py  main.py  pyproject.toml  requirements.txt
app/components/: ChatWidget.tsx  WorkShowcase.tsx
